# python-template

./: Makefile  README.md  pyproject.toml
.github/workflows/: test-app-on-pr.yml
language_wallpaper/: image_editor.py  main.py  proverbs.py
language_wallpaper/translations/: english.py  french.py  language.py  translations.py
language_wallpaper/wallpaper_controller/: mac.py  wallpaper.py  wallpaper_controller.py
python_template/: main.py
resources/data/: French-failed.json  French.json
scripts/: run-mac.sh  schedule-mac.sh
tests/: test_main.py  test_proverbs.py  test_text_to_image.py  test_translate_en.py  test_translate_fr.py  test_wallpaper.py
tests/integration/: test_main.py
